--- a/Code/SL/.vscode/launch.json
+++ b/Code/SL/.vscode/launch.json
@@ -4,6 +4,8 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+
         {
             "name": "gcc.exe - 生成和调试活动文件",
             "type": "cppdbg",
@@ -13,7 +15,7 @@
             "stopAtEntry": false,
             "cwd": "C:\\ForEden\\mingw-w64\\mingw64\\bin",
             "environment": [],
-            "externalConsole": false,
+            "externalConsole": true,
             "MIMode": "gdb",
             "miDebuggerPath": "C:\\ForEden\\mingw-w64\\mingw64\\bin\\gdb.exe",
             "setupCommands": [
